# hercl

./: README
artist-critic/: README.txt  art-school.template  make-artists.sh  make-critics.sh  make-train.sh  run-critic.sh  run-phase.sh  settings.template
cmake/: CMakeLists.txt
debug/: Makefile
doc/: CROSS_VALIDATION.txt  DEBUG_TOOLS.txt  EXTRA_STUFF.txt  FAQ.txt  FILE_FORMAT.txt  GETTING_STARTED.txt  INTERACTIVE_LEARNING.txt  MAKING.txt  PARALLEL.txt  README.txt  SUPERVISED_LEARNING.txt
inter/cfg/: double_pole.cfg  pole_cart.cfg
inter/evol/: Makefile
inter/hrc/: pole_cart.hrc
inter/tune/: Makefile
lib/cfg/: nn2t1.cfg  nn4t1.cfg
lib/hrc/: nn16.hrc  nn256.hrc
src/base/: Makefile  cross_mutate.c  cross_mutate.h  debug_interact.c  eval.c  eval.h  gradient.c  gradient.h  hercl.c  hercsearch.c  inter_hercl.c  inter_hercl.h  interact.c  interact.h  intersearch.c  master.c  message.c  message.h  point.c  point.h  scan_print.c  scan_print.h  step.c  step.h  super.c  super.h
src/hashmap/: hashmap.c  hashmap.h
src/inter/: Makefile  OCVCanvas.cpp  OCVCanvas.h  art-school.cpp  art-school.h  double_pole.c  double_pole.h  human.c  human.h  mimic.c  mimic.h  pole_cart.c  pole_cart.h  square_env.c  square_env.h
src/metrics/: metrics.cpp  metrics.h  runMetrics.cpp
src/xval/: Makefile  cross_check.c  cross_fold.c  gen_fold.c
super/data/raw/: australian.in  hepatitis.in  ionosphere.in  max.in  min.in  pima.in  promoters.in  sonar.in  spirals.in  xor.in  xor_.in
super/data/xval/: Makefile  cross_check.sh  extract.sh  gen_fold.sh  run1.sh  run_many.sh
super/evol/: Makefile
super/multi/: Makefile  ionosphere_4.list
super/string/src/: Makefile  catstr.c  chrstr.c  idxstr.c  mystring.c  mystring.h  strcat.c  strchr.c  strcmp.c  strcpy.c  (+3 more)
super/tune/: Makefile
test/: Makefile  backprop.cfg  backprop.hrc  heapsort.hrc  heapsort0.hrc  quicksort.hrc  quicksort0.hrc  sim.hrc  sim0.hrc  simbig.hrc  sort.in
